[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutcp-lab"
version = "0.1.0"
description = "A Python UTCP client, tool registry, and agent orchestrator."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
include = ["pyutcp_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["pyutcp_lab"]
branch = true

[tool.coverage.report]
show_missing = true
